# potato-cluster

./: .gitignore  README.md
.github/workflows/: apply-hello-api-deployment.yaml
docs/: hello-api-memory-limit-fix.md
docs/runbooks/: KubeContainerOomKiller.md
grafana/: dashboard-fpog-beyla.json  dashboard-fpog-otel.json
hello-api/: Dockerfile  app.py  pyproject.toml  requirements.txt
k6/: loadtest.js
kubernetes/: potato-cluster-config.yaml
kubernetes/helm/alloy-rabbitmq/: .env.example  values.yaml
kubernetes/helm/alloy-sdk-profiles/: .env.example  values.yaml
kubernetes/helm/grafana-k8s-monitoring/: .env.example  values.yaml
kubernetes/helm/otel-demo/: values-local.yaml  values.yaml
kubernetes/manifests/: hello-api-deployment.yaml  hello-api-nginx-deployment.yaml  noisy-neighborhood-pods.yaml
kubernetes/resources/hello-api/: hello-api-deployment.yaml  hello-api-service.yaml  nginx-reverse-proxy-deployment.yaml  nginx-reverse-proxy-service.yaml
kubernetes/resources/noisy-neighborhood/: crash-loop-pod.yaml  stress-cpu-pod.yaml  stress-mem-pod.yaml
kubernetes/resources/rabbitmq/: rabbitmq-configmap.yaml  rabbitmq-rbac.yaml  rabbitmq-secret.yaml  rabbitmq-service-headless.yaml  rabbitmq-service.yaml  rabbitmq-statefulset.yaml
scripts/: apply-hello-api-deployment.sh  apply-hello-api-fix.sh  oom-kafka.sh  revert-to-baseline.sh  sync-hello-api.sh  sync-otel-demo.sh
skills/: KubeContainerOomKiller_Runbook.md
